<resources>
    <string name="app_name">LoginRegisterFire</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="fullname">Full Name</string>
    <string name="email">E-Mail</string>
    <string name="loginhere">Already have an account? Log in!</string>
    <string name="signuphere">Create an Account</string>
    <string name="main_logout">Logout</string>
    <string name="your_profile">Your Profile, </string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="register_as">Register as</string>
    <string name="donor">Donor</string>
    <string name="admin">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_bullet">\u2022 Address:</string>
    <string name="time_bullet">\u2022 Time:</string>
    <string name="section_bullet">\u2022 Section:</string>
    <string name="bullet">\u2022 :</string>
</resources>