<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <!--android:onClick="logout"-->
    <Button
        android:id="@+id/logout_btn"
        android:layout_width="407dp"
        android:layout_height="53dp"
        android:layout_marginBottom="32dp"
        android:text="@string/main_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editProfile_btn"
        android:layout_width="407dp"
        android:layout_height="53dp"
        android:layout_marginBottom="92dp"
        android:text="Edit Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourProfileText"
        android:layout_width="223dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/your_profile"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/usernameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/name"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/yourProfileText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="159dp"
        android:layout_height="158dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/userboy" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="380dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/e_mail"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameText" />

    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="380dp"
        android:layout_height="27dp"
        android:layout_marginTop="292dp"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>